Integrated multer for image upload, adding get route for image, updated product schema for imageData, imageType and imageUrl, updated test
